added ipad  kinda support

--- a/index.html
+++ b/index.html
@@ -49,7 +49,7 @@
               >
             </li>
 
-            <li class="nav-item pb-4">
+            <li class="nav-item">
               <a href="#cntct1" class="nav-link" onclick="tab()">Contact us</a>
             </li>
           </ul>
@@ -74,9 +74,10 @@
                   <span class="wlc">WELCOME</span> <br /><span class="take">TAKE THE JOURNEY</span>
                 </p>
                 <p class="come">COME EXPLORE THE MAGIC <br />WITHIN OUR CREATIVE STUDIO</p>
-              </div>
-              <div class="row w-auto m-auto text-center mt-5">
-                <a href="#abtus1"><span class="arrow"> </span></a>
+
+                <div class="row w-auto m-auto text-center mt-3">
+                  <a href="#abtus1"><span class="arrow"> </span></a>
+                </div>
               </div>
             </div>
           </div>
@@ -110,19 +111,19 @@
               </div>
             </div>
           </div>
-          <div class="row mt-3 text-center position-relative" style="left: 0.5rem">
+          <div class="row svgs mt-3 text-center position-relative" style="left: 0.5rem">
             <div class="col w-100">
-              <img src="./images/255 1.svg" width="73%" />
+              <img src="./images/255 1.svg" id="by" width="73%" />
             </div>
             <div class="col w-100">
-              <img src="./images/2 1.svg" width="60%" />
+              <img src="./images/2 1.svg" id="up" width="60%" />
             </div>
             <div class="col w-100">
-              <img src="./images/1 dog.svg" width="60%" />
+              <img src="./images/1 dog.svg" id="dog" width="60%" />
             </div>
           </div>
           <div
-            class="d-flex flex-row justify-content-center fixed-bottom mb-5"
+            class="d-flex flex-row justify-content-center fixed-bottom mb-1"
             style="bottom: 0; left: 0.5em; z-index: 1">
             <div class="me-5">
               <a href="https://www.instagram.com/sunnymoon.project/"
@@ -150,27 +151,29 @@
           <div class="container-fluid m-auto" style="padding-left: 0; padding-right: 0">
             <div
               class="swiper mySwiper position-relative"
-              style="top: 12vw; bottom: 0; left: 0; right: 0; width: 100%">
+              style="top: 3em; bottom: 0; left: 0; right: 0; width: 100%">
               <div class="swiper-wrapper mt-5">
                 <div class="swiper-slide">
                   <div class="row">
                     <div>
                       <div class="text-center">
-                        <img src="./images/Layer 3.png" style="width: 30" />
+                        <img src="./images/Layer 3.png" id="sun" style="width: 20" />
                       </div>
-                      <h3 class="pkgs pb-3 text-center" id="txtdown">SUN PACKAGE</h3>
-                      <div class="offset-md-4 offset-2">
-                        <div class="bullet">
-                          <p class="underline offers">Illustration</p>
-                        </div>
-                        <div class="bullet">
-                          <p class="underline offers">Visual Development</p>
-                        </div>
-                        <div class="bullet">
-                          <p class="underline offers">Storyboards</p>
-                        </div>
-                        <div class="bullet">
-                          <p class="underline offers">Branding | Web Design</p>
+                      <div class="col-auto">
+                        <h3 class="pkgs pb-3 text-center" id="txtdown">SUN PACKAGE</h3>
+                        <div class="offset-2">
+                          <div class="bullet">
+                            <p class="underline offers">Illustration</p>
+                          </div>
+                          <div class="bullet">
+                            <p class="underline offers">Visual Development</p>
+                          </div>
+                          <div class="bullet">
+                            <p class="underline offers">Storyboards</p>
+                          </div>
+                          <div class="bullet">
+                            <p class="underline offers">Branding | Web Design</p>
+                          </div>
                         </div>
                       </div>
                     </div>
@@ -178,14 +181,12 @@
                 </div>
                 <div class="swiper-slide">
                   <div class="row">
-                    <div
-                      class="col-auto ms-lg-5 position-absolute"
-                      style="left: 0; right: 0; top: 0; bottom: 0">
+                    <div>
                       <div class="text-center">
-                        <img src="./images/Layer 5.png" style="width: 30" />
+                        <img src="./images/Layer 5.png" id="moon" style="width: 30" />
                       </div>
                       <h3 class="pkgs pb-3 text-center" id="txtdown">MOON PACKAGE</h3>
-                      <div class="offset-md-4 offset-2">
+                      <div class="offset-2">
                         <div class="bullet">
                           <p class="underline offers">3D Outfit Mockups</p>
                         </div>
@@ -204,14 +205,12 @@
                 </div>
                 <div class="swiper-slide">
                   <div class="row">
-                    <div
-                      class="col-auto ms-lg-5 position-absolute"
-                      style="left: 0; right: 0; top: 0; bottom: 0">
+                    <div>
                       <div class="text-center">
-                        <img src="./images/Layer 4.png" style="width: 30" />
+                        <img src="./images/Layer 4.png" id="ecl" style="width: 30" />
                       </div>
-                      <h3 class="pkgs pb-3 text-center" id="txtdown">ECLIPSE PACKAGE</h3>
-                      <div class="offset-md-4 offset-2">
+                      <h3 class="pkgs pb-3 text-center">ECLIPSE PACKAGE</h3>
+                      <div class="offset-2">
                         <div class="bullet">
                           <p class="underline offers">Character Design</p>
                         </div>
