--- a/index.html
+++ b/index.html
@@ -70,7 +70,7 @@
                 <img src="./images/Group_1_1_.png" />
               </div>
               <div class="row w-auto m-auto">
-                <p style="line-height: 2rem; margin-top: 3rem">
+                <p style="line-height: 2rem; margin-top: 3rem; z-index: 10">
                   <span class="wlc">WELCOME</span> <br /><span class="take">TAKE THE JOURNEY</span>
                 </p>
                 <p class="come">COME EXPLORE THE MAGIC <br />WITHIN OUR CREATIVE STUDIO</p>
