removed /success/ the bish

--- a/index.html
+++ b/index.html
@@ -623,8 +623,7 @@
                   onSubmit="submit"
                   onsubmit="submt()"
                   id="frm"
-                  date-netlify-honeypot="bot-field"
-                  action="/success/">
+                  date-netlify-honeypot="bot-field">
                   <!-- Name input -->
                   <div class="row mb-3">
                     <div class="col-6">
