--- a/index.html
+++ b/index.html
@@ -405,7 +405,7 @@
         <section id="wlc">
           <div class="intro">
             <p>
-              <span class="wlc">HELLO SAMMY</span><br />
+              <span class="wlc">WELCOME</span><br />
               <span class="take">TAKE THE JOURNEY</span><br />
               <span class="come">COME EXPLORE THE MAGIC WITHEN OUR CREATIVE STUDIO</span><br />
             </p>
