added dahlia notes and optimized the view

--- a/index.html
+++ b/index.html
@@ -112,37 +112,38 @@
             </div>
           </div>
           <div class="row svgs mt-3 text-center m-0 p-0 position-relative">
-            <div class="d-flex svgs flex-row justify-content-evenly position-relative w-100">
+            <div
+              class="d-flex svgs flex-row justify-content-evenly align-items-end position-relative">
               <div class="align-self-baseline">
-                <img src="./images/255 1.svg" id="by" size="70vw" />
+                <img src="./images/255 1.svg" id="by" width="90" />
               </div>
 
-              <div><img src="./images/2 1.svg" id="up" size="60vw" /></div>
+              <div><img src="./images/2 1.svg" id="up" width="70" /></div>
 
-              <div><img src="./images/1 dog.svg" id="dog" size="60vw" /></div>
+              <div><img src="./images/1 dog.svg" id="dog" width="65" /></div>
             </div>
           </div>
           <div
-            class="d-flex flex-row justify-content-center fixed-bottom mb-1"
+            class="d-inline-flex flex-row justify-content-center align-items-end fixed-bottom mb-1 w"
             style="bottom: 0; left: 0.5em; z-index: 1">
             <div class="me-5">
               <a href="https://www.instagram.com/sunnymoon.project/"
-                ><img src="./images/insta.svg" target="_blank" role="img"
+                ><img src="./images/insta.svg" target="_blank" role="img" id="instamb"
               /></a>
             </div>
             <div class="me-5">
               <a href="https://twitter.com/SunnyMoonPrj"
-                ><img src="./images/twitter.svg" target="_blank" role="img"
+                ><img src="./images/twitter.svg" target="_blank" role="img" id="twtmb"
               /></a>
             </div>
             <div class="me-5">
               <a href="https://www.linkedin.com/company/sunnymoon-project/"
-                ><img src="./images/linkedin.svg" target="_blank" role="img"
+                ><img src="./images/linkedin.svg" target="_blank" role="img" id="lnkmb"
               /></a>
             </div>
-            <div>
+            <div class="align-bottom">
               <a href="https://www.behance.net/sunnymoonproject"
-                ><img src="./images/Behance.svg" target="_blank" role="img"
+                ><img src="./images/Behance.svg" target="_blank" role="img" id="bhncmb"
               /></a>
             </div>
           </div>
@@ -364,13 +365,12 @@
               </div>
             </div>
             <!-- Social Media Links -->
-            <div
-              class="navbar-nav d-flex flex-row position-relative align-content-end sm-icons pe-5">
+            <div class="navbar-nav d-inline-flex align-items-start flex-row sm-icons pe-5">
               <a
                 class="nav-link active nav-hover"
                 href="mailto: info.sunnymoonproject@gmail.com"
                 target="_blank"
-                ><img src="./images/email (2).png" width="20"
+                ><img src="./images/email (2).png" width="18"
               /></a>
               <a
                 class="nav-link active nav-hover"
