--- a/index.html
+++ b/index.html
@@ -311,10 +311,7 @@
                 class="row tnku position-relative text-center"
                 style="line-height: 20px; top: 18em"
                 id="tnku2">
-                <p>
-                  <span class="crth4">Thank You for writing to us! </span><br />
-                 
-                </p>
+                <p><span class="crth4">Thank You for writing to us! </span><br /></p>
               </div>
             </div>
           </div>
@@ -374,7 +371,7 @@
                 class="nav-link active nav-hover"
                 href="https://www.instagram.com/sunnymoon.project/"
                 target="_blank"
-                ><img src="./images/insta.svg" width="16"
+                ><img src="./images/insta.svg" width="14"
               /></a>
               <a
                 class="nav-link active nav-hover"
@@ -386,7 +383,7 @@
                 class="nav-link active nav-hover"
                 href="https://www.linkedin.com/company/sunnymoon-project/"
                 target="_blank"
-                ><img src="./images/linkedin.svg" width="16"
+                ><img src="./images/linkedin.svg" width="14"
               /></a>
               <a
                 class="nav-link active nav-hover"
