--- a/index.html
+++ b/index.html
@@ -360,37 +360,44 @@
               </div>
             </div>
             <!-- Social Media Links -->
-            <div class="navbar-nav d-inline-flex align-items-start flex-row sm-icons pe-5">
-              <a
-                class="nav-link active nav-hover"
-                href="mailto: info.sunnymoonproject@gmail.com"
-                target="_blank"
-                ><img src="./images/email (2).png" width="18"
-              /></a>
-              <a
-                class="nav-link active nav-hover"
-                href="https://www.instagram.com/sunnymoon.project/"
-                target="_blank"
-                ><img src="./images/insta.svg" width="14"
-              /></a>
-              <a
-                class="nav-link active nav-hover"
-                href="https://twitter.com/SunnyMoonPrj"
-                target="_blank"
-                ><img src="./images/twitter.svg" width="16"
-              /></a>
-              <a
-                class="nav-link active nav-hover"
-                href="https://www.linkedin.com/company/sunnymoon-project/"
-                target="_blank"
-                ><img src="./images/linkedin.svg" width="14"
-              /></a>
-              <a
-                class="nav-link active nav-hover"
-                href="https://www.behance.net/sunnymoonproject"
-                target="_blank"
-                ><img src="./images/Behance.svg" width="20"
-              /></a>
+            <div class="navbar-nav d-inline-flex flex-row align-items-end sm-icons pe-5 mb-2">
+              <div class="nav-hover1">
+                <a
+                  class="nav-link active"
+                  href="mailto: info.sunnymoonproject@gmail.com"
+                  target="_blank"
+                  ><img src="./images/email (2).png" width="20"
+                /></a>
+              </div>
+              <div class="nav-hover1">
+                <a
+                  class="nav-link active"
+                  href="https://www.instagram.com/sunnymoon.project/"
+                  target="_blank"
+                  ><img src="./images/insta.svg" width="15"
+                /></a>
+              </div>
+              <div class="nav-hover1">
+                <a class="nav-link active" href="https://twitter.com/SunnyMoonPrj" target="_blank"
+                  ><img src="./images/twitter.svg" width="16"
+                /></a>
+              </div>
+              <div class="nav-hover1">
+                <a
+                  class="nav-link active"
+                  href="https://www.linkedin.com/company/sunnymoon-project/"
+                  target="_blank"
+                  ><img src="./images/linkedin.svg" width="15"
+                /></a>
+              </div>
+              <div class="nav-hover1">
+                <a
+                  class="nav-link active"
+                  href="https://www.behance.net/sunnymoonproject"
+                  target="_blank"
+                  ><img src="./images/Behance.svg" width="20"
+                /></a>
+              </div>
             </div>
           </div>
         </div>
@@ -466,10 +473,10 @@
 
           <!-- TREEES -->
           <div class="position-absolute trees d-no">
-            <div class="position-absolute" style="left: 600px">
+            <div class="position-absolute" style="left: 500px">
               <img src="./images/tree1.png" style="height: 100vh" id="img" />
             </div>
-            <div class="position-absolute" style="right: 400px">
+            <div class="position-absolute" style="right: 300px">
               <img src="./images/tree2.png" style="height: 100vh" id="img2" />
             </div>
           </div>
