added required fields

--- a/index.html
+++ b/index.html
@@ -246,7 +246,7 @@
                 </p>
               </div>
 
-              <div class="mt-2">
+              <div class="mt-1">
                 <form
                   name="contactmobile"
                   method="POST"
@@ -263,6 +263,7 @@
                         type="text"
                         class="form-control name"
                         placeholder="NAME"
+                        required
                         style="border-radius: 20px; width: 15rem; outline: none" />
                     </div>
                   </div>
@@ -274,6 +275,7 @@
                         class="form-control"
                         placeholder="EMAIL"
                         id="email"
+                        required
                         style="
                           border-radius: 20px;
                           font-family: 'Lato';
@@ -288,6 +290,7 @@
                     <div class="form-outline">
                       <textarea
                         name="message"
+                        required
                         class="form-control"
                         style="
                           resize: none;
@@ -633,6 +636,7 @@
                         name="name"
                         type="text"
                         class="form-control"
+                        required
                         placeholder="NAME"
                         style="border-radius: 20px; outline: none" />
                     </div>
@@ -644,6 +648,7 @@
                         type="text"
                         class="form-control"
                         placeholder="EMAIL"
+                        required
                         style="border-radius: 20px; outline: none" />
                     </div>
                   </div>
@@ -652,6 +657,7 @@
                     <textarea
                       name="message"
                       class="form-control"
+                      required
                       style="resize: none; height: 150px; border-radius: 10px; outline: none"
                       rows="1"
                       placeholder="WRITE TO US…"></textarea>
