trying action success

--- a/index.html
+++ b/index.html
@@ -627,6 +627,7 @@
                   onSubmit="submit"
                   onsubmit="submt()"
                   id="frm"
+                  action="/index/"
                   date-netlify-honeypot="bot-field">
                   <!-- Name input -->
                   <div class="row mb-3">
