--- a/index.html
+++ b/index.html
@@ -627,7 +627,7 @@
                   onSubmit="submit"
                   onsubmit="submt()"
                   id="frm"
-                  action="/index/"
+                  action="/success/"
                   date-netlify-honeypot="bot-field">
                   <!-- Name input -->
                   <div class="row mb-3">
