--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
     <link rel="icon" type="image/x-icon" href="./images/favicon.png" />
   </head>
 
-  <body onLoad="JavaScript:checkRefresh();">
+  <body onLoad="checkRefresh();">
     <div class="mobilediv">
       <header>
         <nav class="navbar fixed-top bg-transparent">
