--- a/index.html
+++ b/index.html
@@ -253,6 +253,7 @@
                   data-netlify="true"
                   onsubmit="submt1()"
                   onSubmit="submit"
+                  action="/index/"
                   id="frm1">
                   <!-- Name input -->
 
@@ -627,7 +628,7 @@
                   onSubmit="submit"
                   onsubmit="submt()"
                   id="frm"
-                  success="/index/"
+                  action="/index/"
                   date-netlify-honeypot="bot-field">
                   <!-- Name input -->
                   <div class="row mb-3">
