--- a/index.html
+++ b/index.html
@@ -383,7 +383,7 @@
               </div>
               <div class="nav-hover1">
                 <a class="nav-link active" href="https://twitter.com/SunnyMoonPrj" target="_blank"
-                  ><img src="./images/twitter.svg" width="16"
+                  ><img src="./images/twitter.svg" width="17"
                 /></a>
               </div>
               <div class="nav-hover1">
@@ -399,7 +399,11 @@
                   class="nav-link active"
                   href="https://www.behance.net/sunnymoonproject"
                   target="_blank"
-                  ><img src="./images/Behance.svg" width="20"
+                  ><img
+                    class="position-relative"
+                    style="top: 1px"
+                    src="./images/Behance.svg"
+                    width="20"
                 /></a>
               </div>
             </div>
