--- a/index.html
+++ b/index.html
@@ -417,7 +417,7 @@
             <p>
               <span class="wlc">WELCOME</span><br />
               <span class="take">TAKE THE JOURNEY</span><br />
-              <span class="come">COME EXPLORE THE MAGIC WITHEN OUR CREATIVE STUDIO</span><br />
+              <span class="come">COME EXPLORE THE MAGIC WITHIN OUR CREATIVE STUDIO</span><br />
             </p>
             <a href="#abtus" style="z-index: 1"><div class="arrow" onclick="next()"></div> </a>
           </div>
